<resources>
    <string name="app_name">FileSave</string>
    <string name="GetPermission">授予读写权限</string>
    <string name="ShowCode">显示代码</string>
    <string name="WriteCode">写入代码</string>
    <string name="ChangeCode">自定义代码</string>
    <string name="WriteCodeHere" translatable="false">代码在下面输入框里编辑，这几行代码包括：帧率(所有画质的帧率)，分辨率，画面风格，画面品质(包括经典和团竞两条)，抗锯齿的代码，具体修改方法请自查，最后一行必须是空行
                  一些代码提示：
                帧率：+CVars=0B57292C3B3E3D1C0F101A1C3F292A
                画质：+CVars=0B572C0A1C0B280C1815100D002A1C0D0D10171E
                画面风格：+CVars=0B572C0A1C0B313D2B2A1C0D0D10171E44
                分辨率：+CVars=0B5734161B10151C3A16170D1C170D2A1A18151C3F181A0D160B44
                抗锯齿：+CVars=0B572C0A1C0B342A38382A1C0D0D10171E44
                等于号：44    0：49   1：48</string>
    <string name="Save">保存</string>
    <string name="Cancel">取消</string>
    <string name="ResetCode">使用默认代码</string>
    <string name="QuickMode">快速模式</string>
    <string name="GetCode">获取和平精英的代码</string>
    <string name="Code">[BackUp DeviceProfile]
+CVars=0B5734161B10151C3A16170D1C170D2A1A18151C3F181A0D160B4448574C
+CVars=0B572A0D180D101A341C0A1135363D3D100A0D18171A1C2A1A18151C44495741
+CVars=1F161510181E1C5735363D3D100A0D18171A1C2A1A18151C4448
+CVars=0B5729180B0D101A151C35363D3B10180A4449
+CVars=0B573C14100D0D1C0B2A09180E172B180D1C2A1A18151C4448
+CVars=0B573D1C0D18101534161D1C4449
+CVars=0B572A11181D160E280C1815100D004448
+CVars=0B572A11181D160E573418013A2A342B1C0A16150C0D101617444D
+CVars=0B572A11181D160E573A2A345734180134161B10151C3A180A1A181D1C0A444B
+CVars=0B572A11181D160E573D100A0D18171A1C2A1A18151C4449574C
+CVars=0B573418013817100A160D0B1609004449
+CVars=0B5734180D1C0B101815280C1815100D00351C0F1C154448
+CVars=0B572C0A1C0B280C1815100D002A1C0D0D10171E444B
+CVars=0B5734161B10151C573D00171814101A361B131C1A0D2A11181D160E4448
+CVars=0B573D1C090D11361F3F101C151D280C1815100D004449
+CVars=0B572B1C1F0B181A0D101617280C1815100D004449
+CVars=1F161510181E1C5734101735363D4449
+CVars=0B572A0D0B1C181410171E57291616152A10031C444B4949
+CVars=0B57292C3B3E2F1C0B0A101617444C
+CVars=0B572C0A1C0B313D2B2A1C0D0D10171E4448
+CVars=0B5734161B10151C313D2B4449
+CVars=0B5734161B10151C572A1A1C171C3A1615160B3F160B14180D4449
+CVars=0B573B15161614280C1815100D004449
+CVars=0B5735101E110D2A11181F0D280C1815100D004449
+CVars=0B5734161B10151C572D16171C141809091C0B3F1015144449
+CVars=0B5734161B10151C5738150E18000A2B1C0A16150F1C3D1C090D114449
+CVars=0B572C0A1C0B342A38382A1C0D0D10171E4449
+CVars=0B5734161B10151C342A38384448
+CVars=0B573D1C1F180C150D3F1C180D0C0B1C5738170D10381510180A10171E4449
+CVars=0B5734161B10151C2A101409151C2A11181D1C0B4448
+CVars=0B5734161B10151C370C143D00171814101A291610170D35101E110D0A4449
+CVars=0B572C0A1C0B2F0C151218172A1C0D0D10171E4449
+CVars=0B572C0A1C0B2D1C1814280C1815100D003C171118171A1C2A1C0D0D10171E4449


[UserCustom DeviceProfile]
+CVars=0B572C0A1C0B280C1815100D002A1C0D0D10171E4449
+CVars=0B572C0A1C0B2A11181D160E2A0E100D1A114449
+CVars=0B572A11181D160E280C1815100D004449
+CVars=0B5734161B10151C3A16170D1C170D2A1A18151C3F181A0D160B4448574C
+CVars=0B572C0A1C0B2D1C1814280C1815100D003C171118171A1C2A1C0D0D10171E4449
+CVars=0B572C0A1C0B2F0C151218172A1C0D0D10171E4449
+CVars=0B572C0A1C0B280C1815100D002A1C0D0D10171E2D384449
+CVars=0B5734161B10151C313D2B44495749
+CVars=0B5734161B10151C572A1A1C171C3A1615160B3F160B14180D44495749
+CVars=0B572C0A1C0B313D2B2A1C0D0D10171E444B
+CVars=0B57383A3C2A2A0D00151C444B
+CVars=0B572C0A1C0B342A38382A1C0D0D10171E4449
+CVars=0B573D1C1F180C150D3F1C180D0C0B1C5738170D10381510180A10171E44495749
+CVars=0B5734161B10151C342A383844485749
+CVars=0B57342A38383A160C170D444D5749
+CVars=0B5734180D1C0B101815280C1815100D00351C0F1C154449
+CVars=0B572A11181D160E573418013A2A342B1C0A16150C0D101617444D
+CVars=0B572A11181D160E573A2A345734180134161B10151C3A180A1A181D1C0A4449
+CVars=0B572A11181D160E573D100A0D18171A1C2A1A18151C4449
+CVars=0B5734161B10151C573D00171814101A361B131C1A0D2A11181D160E4449
+CVars=0B572A0D180D101A341C0A1135363D3D100A0D18171A1C2A1A18151C44485741
+CVars=1F161510181E1C5735363D3D100A0D18171A1C2A1A18151C4449574F
+CVars=0B573D1C0D18101534161D1C4449
+CVars=0B572A0D0B1C181410171E57291616152A10031C444B4949
+CVars=0B573C14100D0D1C0B2A09180E172B180D1C2A1A18151C4449574C
+CVars=0B5729180B0D101A151C35363D3B10180A444B
+CVars=0B573D1C090D11361F3F101C151D280C1815100D004449
+CVars=0B572B1C1F0B181A0D101617280C1815100D004449
+CVars=1F161510181E1C5734101735363D4449
+CVars=0B573418013817100A160D0B1609004449
+CVars=0B57292C3B3E2F1C0B0A101617444C
+CVars=0B5734161B10151C2A101409151C2A11181D1C0B4448
+CVars=0B5734161B10151C370C143D00171814101A291610170D35101E110D0A4449



</string>
    <string name="DeleteCloths">删除服饰资源</string>

</resources>