<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <Button
                android:id="@+id/Button_GetPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GetPermission"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button_WriteCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WriteCode"
                android:layout_marginHorizontal="10dp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/Button_setQuick"
                android:layout_width="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:layout_height="wrap_content"
                android:text="@string/QuickMode"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/Button_ShowCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShowCode"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                android:id="@+id/Button_ChangeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChangeCode"
                android:layout_marginHorizontal="10dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button_ResetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ResetCode"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <Button
                android:id="@+id/Button_GetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GetCode"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Text_ShowCode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>