<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_ChangeCode"
            android:singleLine="false"
            android:maxLines="9999"
            android:scrollHorizontally="false"
            android:hint="@string/WriteCodeHere"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Button_CodeOk"
                android:text="@string/Save"
                android:layout_marginEnd="10dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Button_CodeCancel"
                android:text="@string/Cancel"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>